# surfsense-mcp-server

./: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
.github/workflows/: build-image.yml  test.yml
surfsense_mcp/: __main__.py  client.py  server.py
surfsense_mcp/auth/: __init__.py  http.py  stdio.py  storage.py
surfsense_mcp/tools/: documents.py  reports.py  threads.py
tests/: conftest.py  test_auth_http.py  test_auth_stdio.py  test_auth_storage.py  test_http_mode_auth.py  test_main.py  test_main_logging.py  test_readme_tools_sync.py  test_server_config.py  test_smoke_image.py  test_tools.py
